fix: corrigindo caso de uso de PATIENT, e criando rotas para criação de um registro
